--- a/packages/audioplayers/pubspec.yaml
+++ b/packages/audioplayers/pubspec.yaml
@@ -8,7 +8,7 @@ flutter:
   plugin:
     platforms:
       android:
-        default_package: audioplayers_android
+        default_package: audioplayers_android_exo
       ios:
         default_package: audioplayers_darwin
       linux:
@@ -21,7 +21,7 @@ flutter:
         default_package: audioplayers_windows
 
 dependencies:
-  audioplayers_android: ^5.0.3
+  audioplayers_android_exo: ^0.1.2
   audioplayers_darwin: ^6.1.0
   audioplayers_linux: ^4.1.0
   audioplayers_platform_interface: ^7.0.0
